// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="css-19gnmai "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-wm4ovl"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="css-1mcj1qh "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1vphhlq"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="css-19gnmai "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-wm4ovl"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="css-1k9vl9z "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-a1u7zd"
  >
    Press me
  </div>
</Button>
`;
